code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Aug-2013 Jean-Marie Simonet
 # [#31597] Undefined variable in com_banners model. Thanks Mario Proenca
 # [#31432] News Feed Manager: News Feed Page. --> System does not displayed the proper tootl tip. Thanks Sebastian Łuckoś

09-Aug-2013 Jean-Marie Simonet
 # [#31694] No search result at the contacts, weblinks, newsfeeds, categories. Thanks Carsten Wirtz
 # [#31639] Com_search is using mb string functions (regression)
 # [#31701] Article, newsfeeds, contact modal Clear button broken. Thanks Philip Schell
 $ [#30629] Menu Item "Type" for Tags should probably change to "Content Type". Thanks Brian Teeman
 # [#31689] remove "input-append" in login module. Thanks Constantin Romankiewicz
 # [#30794] Title admin module doesn't disable the component toolbar title. Thanks Michael Babker
 # [#31412] We can't look what "search results" have searches that are not viewed in first pagination page. Thanks Bojan Nišević
 #+ [#31368] jdoc:include tag fails on type "component" and "head" without space before "/>". Thanks Lu Nguyen
 # [#31711] Cannot delete web site entry for a contact. Thanks Achal Aggarwal
 + [#31596] Language field improvements + registration language. Thanks Roberto Segura

07-Aug-2013 Jean-Marie Simonet
 $ [#31606] Small typo fix in lang. Thanks Brian Teeman
 # [#31314] language change dropdown at installation don't work if you scroll down. Thanks Lu Nguyen
 # [#23638] *Uninstalling 2 different extensions gets only one message. Thanks Thong Tran
 # [#31683] In debug mode with mysqli some extensions have warnings when freeing mysqli cursor themselves. Thanks Beat
 # [#31410] Warnings at the offline screen looks bad. Thanks Lu Nguyen
 #$ [#31622] *Media Manager doesn't cope with folder names that include spaces. Thanks Richard McDaniel